Paso 2 del cambio de gestión de volumen de los equipos_otros, de material por material a ingreso por ingreso